# Voicer

./: .gitattributes  .gitignore  LICENSE  README.md  Voicer.spec  architecture.md  pyproject.toml  run_gui.py
config/: wx_gui_api_keys.example.json  wx_gui_config.example.json
hooks/: runtime_voicer.py
scripts/: download_external.py
src/: __init__.py
src/config/: __init__.py  cli_parser.py  prompts.py  settings.py
src/core/: __init__.py  asr_client.py  asr_router.py  audio_converter.py  context_manager.py  pipeline.py  pipeline_config.py  segment_manager.py  vad_processor.py
src/core/asr_backends/: base.py  dashscope.py  siliconflow.py
src/gui_wx/: __init__.py  app.py  paths.py
src/gui_wx/dialogs/: manage_api_keys.py  manage_endpoints.py  manage_presets.py  manage_prompts.py  progress_dialog.py  quick_presets.py
src/gui_wx/panels/: asr_panel.py  text_polish_panel.py
src/models/: __init__.py  audio_segment.py  recognition_result.py  vad_segment.py
src/test_audio/: test.m4a  test.txt
src/utils/: __init__.py  audio_utils.py  external.py  file_utils.py  logger.py  text_diff.py  token_counter.py
src/workers/: text_polish_worker.py
tests/: test_wx_gui.py  text_diff.py
