[project]
name = "Voicer"
version = "1.0.0"
description = "长音视频语音识别系统 - 支持超过3分钟音频的分段识别和上下文管理"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.24.4",
    "onnxruntime>=1.16.0",
    "soundfile>=0.12.1",
    "tqdm>=4.66.0",
    "wxpython>=4.2.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

